k8s/base/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: comin-organization-service
  namespace: comin-dev
  labels:
    app: comin-organization-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: comin-organization-service
  template:
    metadata:
      labels:
        app: comin-organization-service
    spec:
      containers:
      - name: comin-organization-service
        image: ghcr.io/kaveeshag/comin-organization-service:961ff7567731dcdeb6613ce5820cfa72260c66bb
        imagePullPolicy: Always
        ports:
        - containerPort: 8081
        resources:
          limits:
            cpu: "0.5"
            memory: "512Mi"
          requests:
            cpu: "0.2"
            memory: "256Mi"
